@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/13 02:19:16 brook Exp $
+
+SHA1 (tex-beamerposter-47508/beamerposter.tar.xz) = 47e27e369e7bb30363b4d14b834a1a687ff43a87
+RMD160 (tex-beamerposter-47508/beamerposter.tar.xz) = 89885b9660d3c38bf764f336410a1daf4b2a6196
+SHA512 (tex-beamerposter-47508/beamerposter.tar.xz) = e4ade5948c1eb8e18cba3d3b7699686d55d57361e0b26b923336d295b8fb6c7cdec39832dbe4f9358c94302d412000f19b4706295af5856e12482bb3c9951a98
+Size (tex-beamerposter-47508/beamerposter.tar.xz) = 7476 bytes
